# GaticTacToe

./: COPYING  README.md  meson.build
build-aux/flatpak/: io.github.diegoivan.TicTacToe.json  io.github.diegoivan.TicTacToe.yaml
build-aux/meson/: build-and-run.sh
data/: io.github.diegoivan.GaticTacToe.appdata.xml  io.github.diegoivan.GaticTacToe.appdata.xml.in  io.github.diegoivan.GaticTacToe.appdata.xml.in.in  io.github.diegoivan.GaticTacToe.desktop.in  io.github.diegoivan.GaticTacToe.desktop.in.in  io.github.diegoivan.GaticTacToe.gschema.xml.in  io.github.diegoivan.TicTacToe.appdata.xml.in.in  meson.build
po/: POTFILES
resources/: GaticTacToe.gresource.xml  TicTacToe.gresource.xml  meson.build  style-dark.css  style.css
resources/ui/: Counter.ui  MainWindow.ui  WinnerPage.ui
src/: Application.vala  meson.build
src/Models/: Player.vala
src/Widgets/: Counter.vala  GridElement.vala  MainWindow.vala  WinnerPage.vala
